Update case study descriptions for projects

--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
         </p>
   <p>Follow me on my journey</p>
   <div class="social">
-    <a href="https://twitter.com/sheldonmlloyd"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
-    <a href="https://www.pinterest.com/sheldonlloyd/" class="social-link" title="Pinterest" style="background-image:url(images/pinterest.png)">Pinterest</a>
-    <a href="https://artstation.com/sheldonlloyd" class="social-link" title="Artstation" style="background-image:url(images/artstation.png)">ArtStation</a>
-    <a href="https://www.instagram.com/sheldonmlloyd/" class="social-link" title="Instagram" style="background-image:url(images/instagram.png)">Instagram</a>
-    <a href="https://sheldon227.deviantart.com" class="social-link" title="DeviantArt" style="background-image:url(images/deviantart.png)">DeviantArt</a>
-    <a href="https://plus.google.com/+SheldonLloyd" class="social-link" title="Google Plus" style="background-image:url(images/google.png)">Google+</a>
+    <a target="_blank" href="https://twitter.com/sheldonlloyd22"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
+    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="Artstation" style="background-image:url(images/github.png)">ArtStation</a>
+    <a target="_blank" href="https://plus.google.com/+SheldonLloyd" class="social-link" title="Google Plus" style="background-image:url(images/google.png)">Google+</a>
         </div>
   
       </div>
@@ -66,23 +63,32 @@
         <a target="_blank" href="https://www.webcomicx.com"><img class="project-preview" src="images/webcomicx-screenshot.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          WebcomicX is a opensource some what opionated webcomic content management system built using C# and Razor. It uses XML instead of a SQL database
         </p>
         <h3>Case Study</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          Learning from the success and faluires of comiCharacters I made my next project WbcomicX opensource and moved away from the idea of following MVP princlpes to the T.
         </p>
         <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
+          I wanted to create WebcomicX to be a CMS option that is not heavy weight like Wordpress. The first step in accomplishing this was removing the database. This eliminates the need to set up a database so WebcomicX will workout of the box. A side benefit of not having a database is that server cost can potentionally be cheaper.
         </p>
         <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
+          Since WebcomicX is targeted towards publishing webcomics I could focus on optimizing it for that purpose. This meant that I could do things like added captions making webcomics more accesible in terms of aligning with WCAG guidelines.
+        </p>
+        <p>
+          I also wanted to making things easier not just for the readers but for creators as well. Many creators like to orginize.
+        </p>
+        <p>
+          Not everyone can or wants to use CSS and HTML to edit thier own website for their comic. This why WebcomicX also has customization feature. This had the most extensive work put into it. I had to make it as easy as possible to edit and preview a theme without making it live. I normaly like to make sites usable without javscript. Unfoutuntly the only way to make it work was to use a comobination of JavaScript and C# along with cookies. 
+        </p>
+        <p>
+          Doing research I found that alot of webcomic creators tend to create a character profile page. To make this process easier the CMS also comes with a built in character management system.
+        </p>
+        <p>
+          Beacause WebcomicX is focused on webcomics the blogging feature that comes with is bare bones. This is why I added the ability to link to your blogger, medium, or wordpress blog.
+        </p>
+        <p>
+          In future releases I plan on switching from XML to JSON making it a more standard Headless CMS
         </p>
       </div>
     </div>
@@ -100,23 +106,21 @@
 
         <h3>Details</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          A webcomic recommendation website the lets people discover, collect, and recommend comics from around the web.
         </p>
         <h3>Case Study</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          comiCharacters was made in response to me seeing a need for a place to help with mainly the promotion and to lesser degree discover of webcomics. There was not many solutions avaliable at the time. The websites that did exist at the time was outdated.
         </p>
         <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
+          At the time of comiCharacters inception it was a website in which post and discover both webcomics and the characters the belong to the comic, Hence the name comiCharacters. Upon learning about starting with an MVP so as not to confuse user about what your product is meant to do.
+        </p>
+        <figure><img class="project-preview" src="images/ccomiCharacters-design.jpg" height="auto" width="auto"><figcaption>What comicharacters was original supposed to look like</figcaption></figure>
+        <p>
+          I choose one feature -- recommendation and double down on it. This meant removing any friction for recommending a webcomic. I also remove some images and decreased the size of other images. Leaving only what was neecessary to the user. This was mainly to increase the google speed score of the site.
         </p>
         <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
+          Ultimatally I condensing it down to it's MVP was it's down fall as having characters along with the comic added to it uniqueness.
         </p>
       </div>
     </div>
@@ -132,26 +136,30 @@
       <h2><span class="secondary-color project-title">CSS SPA Portfolio</span></h2>
       <div class="content overflow-hidden cf">
         <a target="_blank" href="https://codepen.io/Sheldon-Lloyd/pen/WXOMNG"><img class="project-preview" src="images/spa-screenshot.png" width="auto" height="auto" /></a>
+        <p>
+          This is a “Meta-analysis” case study of the SPA portfolio in which you are reading this in.
+        </p>
         <h3>Details</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          A pure CSS single page application(SPA) portfolio site template that uses the :target selector to navigate pages and flexbox for the layout but degrades gracefully.
         </p>
         <h3>Case Study</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          I created a portfolio site not only for myself but for others as well so it needed to have decent backward compatibility for older browsers(IE 8 and up). This way the CSS will degrade gracefully in an older browser and if needed — it can be progressively enhanced with JavaScript.
         </p>
         <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
+          The best way to do this while maintaining good usability was to have the home page also act as the navigation menu. It has four separate cards one for a resume, about page, recent projects, and blog posts.
         </p>
         <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
+          The Html is organized so that the page starts with the content (about, resume and projects) and at the bottom are the Navigation cards.
         </p>
+        <p>
+          This serves 2 purposes the first is that it allows people that don’t have target enabled browsers to get straight to the content. It also allows the main navigation to be easily hidden when someone navigates to one of the views using the target selector .view:taget~.main-nav.
+        </p>
+        <p>
+          To maintain a comfortable reading experience the copy is no more than 700 pixels wide. To keep consistency with the cards when viewing the contents of the cards while in desktop view the header is left-aligned while the copy is centered but perceived to be to the right when there is enough space.
+        </p>
+        <a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Read the rest in my blog post on medium</a>
       </div>
     </div>
     <div class="main-nav flexbox margin-0" id="nav">
