--- a/index.html
+++ b/index.html
@@ -63,32 +63,31 @@
         <a target="_blank" href="https://www.webcomicx.com"><img class="project-preview" src="images/webcomicx-screenshot.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
-          WebcomicX is a opensource some what opionated webcomic content management system built using C# and Razor. It uses XML instead of a SQL database
+            WebcomicX is an opensource somewhat opinionated webcomic content management system built using C# and Razor. It uses XML instead of a SQL database.
         </p>
         <h3>Case Study</h3>
         <p>
-          Learning from the success and faluires of comiCharacters I made my next project WbcomicX opensource and moved away from the idea of following MVP princlpes to the T.
+            Learning from the success and failures of comiCharacters I made my next project WebcomicX opensource and moved away from the idea of following MVP principles to the T.        </p>
+        <p>
+            I wanted to create WebcomicX to be a CMS option that is not heavyweight like Wordpress. The first step in accomplishing this was removing the database. This eliminates the need to set up a database so WebcomicX will work out of the box. A side benefit of not having a database is that server cost can potentially be cheaper.
         </p>
         <p>
-          I wanted to create WebcomicX to be a CMS option that is not heavy weight like Wordpress. The first step in accomplishing this was removing the database. This eliminates the need to set up a database so WebcomicX will workout of the box. A side benefit of not having a database is that server cost can potentionally be cheaper.
+            Since WebcomicX is targeted towards publishing webcomics I could focus on optimizing it for that purpose. This meant that I could do things like added captions making webcomics more accessible in terms of aligning with WCAG guidelines.
         </p>
         <p>
-          Since WebcomicX is targeted towards publishing webcomics I could focus on optimizing it for that purpose. This meant that I could do things like added captions making webcomics more accesible in terms of aligning with WCAG guidelines.
+            I also wanted to make things easier not just for the readers but for creators as well. Many creators like to organize.
         </p>
         <p>
-          I also wanted to making things easier not just for the readers but for creators as well. Many creators like to orginize.
+            Not everyone can or wants to use CSS and HTML to edit their own website for their comic. This why WebcomicX also has a customization feature. This had the most extensive work put into it. I had to make it as easy as possible to edit and preview a theme without making it live. I normally like to make sites usable without javascript. Unfortunately, the only way to make it work was to use a combination of JavaScript and C# along with cookies.
         </p>
         <p>
-          Not everyone can or wants to use CSS and HTML to edit thier own website for their comic. This why WebcomicX also has customization feature. This had the most extensive work put into it. I had to make it as easy as possible to edit and preview a theme without making it live. I normaly like to make sites usable without javscript. Unfoutuntly the only way to make it work was to use a comobination of JavaScript and C# along with cookies. 
+            Doing research I found that a lot of webcomic creators tend to create a character profile page. To make this process easier the CMS also comes with a built-in character management system.
         </p>
         <p>
-          Doing research I found that alot of webcomic creators tend to create a character profile page. To make this process easier the CMS also comes with a built in character management system.
+            Beacause WebcomicX is focused on webcomics the blogging feature that comes with is bare bones. This is why I added the ability to link to your blogger, medium, or Wordpress blog.
         </p>
         <p>
-          Beacause WebcomicX is focused on webcomics the blogging feature that comes with is bare bones. This is why I added the ability to link to your blogger, medium, or wordpress blog.
-        </p>
-        <p>
-          In future releases I plan on switching from XML to JSON making it a more standard Headless CMS
+            In future releases, I plan on switching from XML to JSON making it a more standard Headless CMS.
         </p>
       </div>
     </div>
@@ -110,24 +109,24 @@
         </p>
         <h3>Case Study</h3>
         <p>
-          comiCharacters was made in response to me seeing a need for a place to help with mainly the promotion and to lesser degree discover of webcomics. There was not many solutions avaliable at the time. The websites that did exist at the time was outdated.
+            comiCharacters was made in response to me seeing a need for a place to help with mainly the promotion and to lesser degree discover of webcomics. There were not many solutions available at the time. The websites that did exist at the time was outdated.
         </p>
         <p>
-          At the time of comiCharacters inception it was a website in which post and discover both webcomics and the characters the belong to the comic, Hence the name comiCharacters. Upon learning about starting with an MVP so as not to confuse user about what your product is meant to do.
+            At the time of comiCharacters inception, it was a website in which post and discover both webcomics and the characters they belong to the comic, Hence the name comiCharacters. Upon learning about starting with an MVP so as not to confuse user about what your product is meant to do.
         </p>
         <figure><img class="project-preview" src="images/ccomiCharacters-design.jpg" height="auto" width="auto"><figcaption>What comicharacters was original supposed to look like</figcaption></figure>
         <p>
-          I choose one feature -- recommendation and double down on it. This meant removing any friction for recommending a webcomic. I also remove some images and decreased the size of other images. Leaving only what was neecessary to the user. This was mainly to increase the google speed score of the site.
+            I choose one feature -- recommendation and double down on it. This meant removing any friction for recommending a webcomic. I also remove some images and decreased the size of other images. Leaving only what was necessary to the user. This was mainly to increase the google speed score of the site.
         </p>
         <p>
-          Ultimatally I condensing it down to it's MVP was it's down fall as having characters along with the comic added to it uniqueness.
+            Ultimately condensing comiCharacters down to its MVP was the downfall as having characters along with the comic added to its uniqueness.
         </p>
       </div>
     </div>
     <div class="view overflow-hidden col-2" id="css-spa">
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
-          <h3>WebcomicX</h3>
+          <h3>Project</h3>
         </li>
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
