--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p>
             At the time of comiCharacters inception, it was a website in which post and discover both webcomics and the characters they belong to the comic, Hence the name comiCharacters. Upon learning about starting with an MVP so as not to confuse user about what your product is meant to do.
         </p>
-        <figure><img class="project-preview" src="images/ccomiCharacters-design.jpg" height="auto" width="auto"><figcaption>What comicharacters was original supposed to look like</figcaption></figure>
+        <figure><img class="project-preview" src="images/comiCharacters-design.JPG" height="auto" width="auto"><figcaption>What comicharacters was original supposed to look like</figcaption></figure>
         <p>
             I choose one feature -- recommendation and double down on it. This meant removing any friction for recommending a webcomic. I also remove some images and decreased the size of other images. Leaving only what was necessary to the user. This was mainly to increase the google speed score of the site.
         </p>
