Changed twitter handle link & removed Google+ link

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         </p>
   <p>Follow me on my journey</p>
   <div class="social">
-    <a target="_blank" href="https://twitter.com/sheldonlloyd22"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
+    <a target="_blank" href="https://twitter.com/sheldonmlloyd"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
     <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="Artstation" style="background-image:url(images/github.png)">ArtStation</a>
-    <a target="_blank" href="https://plus.google.com/+SheldonLloyd" class="social-link" title="Google Plus" style="background-image:url(images/google.png)">Google+</a>
-        </div>
+  </div>
   
       </div>
     </div>
