--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   <p>Follow me on my journey</p>
   <div class="social">
     <a target="_blank" href="https://twitter.com/sheldonmlloyd"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
-    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="Artstation" style="background-image:url(images/github.png)">ArtStation</a>
+    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="GitHub" style="background-image:url(images/github.png);border:0">GitHub</a>
+    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="GitHub" style="background-image:url(images/fef39b495306149.5e5444f4b75a0.png)">GitHub</a>
   </div>
   
       </div>
