Update about me section

--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
       <h2>About</h2>
       <div class="content overflow-hidden cf">
         <p>
-          Right now I am a webdeveloper but 2018 is the year I plan on becoming a Web comic creator as well.
+          My name is Sheldon Lloyd. Growing up I have always considered myself a hobbyist comic creator. Although I got my first taste of programming in high school it wasn't until college that I discovered that I might have a talent in it as well.
         </p>
         <p>
-          Like many other kids in 90s, I watched a lot of Movies, Saturday morning cartoons, and anime adapted from comics and manga. But once I discovered and started to read the comics and manga from these shows I became inspired and wanted to create a comic of my own.
+          My love of comics and a budding interest in coding formed the perfect marriage. This gave birth to my passion for web design and development. This is especially true if you consider how similar creating a website is to creating a comic book. The story, art, design, and layout of a comic are much like the design and UX stage of creating a website. Then there is the logo and landing page which is like the cover of a comic. One could even argue that the process of [writing dialogue is akin to coding](https://www.adapptor.com.au/blog/coding-is-surprisingly-like-writing)
         </p>
         <p>
-          I started working on my own comic at the ripe old age of 8, by 11 Started drawing the actual comic.
+       I have created a webcomic CMS and a webcomic bookmarking site. I have many other projects on the horizon. I aim to get a job as a full-stack web developer or designer. My dream is to one day turn one of my projects into a company.
         </p>
         <p>
-          This was at the time of the .com bubble, so I didn’t want to make just any comic. It was going to be what I thought at the time to be revolutionary ― I was going to put it on the web! As you can probably tell I was oblivious to the existence of webcomics at the time.
-        </p>
-        <p>
-          Unfortunately by the time I got in high school I found new interests on of which included webdevelopment, and stopped drawing and writing so I never finished. By the end of college, I got back into comics and manga. With this came a renewed interest in art so I've started working on my original comic idea again.
+          My background allows me to join a team as a designer who knows how to code or a developer who understands design.
+
         </p>
   <p>Follow me on my journey</p>
   <div class="social">
