--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <h2>About</h2>
       <div class="content overflow-hidden cf">
         <p>
-          My name is Sheldon Lloyd. Growing up I have always considered myself a hobbyist comic creator. Although I got my first taste of programming in high school it wasn't until college that I discovered that I might have a talent in it as well.
+          My name is Sheldon Lloyd. I a full-stack web designer. Growing up I have always considered myself a hobbyist comic creator. Although I got my first taste of programming in high school it wasn't until college that I discovered that I might have a talent in it as well.
         </p>
         <p>
-          My love of comics and a budding interest in coding formed the perfect marriage. This gave birth to my passion for web design and development. This is especially true if you consider how similar creating a website is to creating a comic book. The story, art, design, and layout of a comic are much like the design and UX stage of creating a website. Then there is the logo and landing page which is like the cover of a comic. One could even argue that the process of [writing dialogue is akin to coding](https://www.adapptor.com.au/blog/coding-is-surprisingly-like-writing)
+          My love of comics and a budding interest in coding formed the perfect marriage. This gave birth to my passion for web design and development. This is especially true if you consider how similar creating a website is to creating a comic book. The story, art, design, and layout of a comic are much like the design and UX stage of creating a website. Then there is the logo and landing page which is like the cover of a comic. One could even argue that the process of <a href="https://www.adapptor.com.au/blog/coding-is-surprisingly-like-writing">writing dialogue is akin to coding</a>
         </p>
         <p>
        I have created a webcomic CMS and a webcomic bookmarking site. I have many other projects on the horizon. I aim to get a job as a full-stack web developer or designer. My dream is to one day turn one of my projects into a company.
@@ -164,7 +164,7 @@
         <div class="main-nav-inner overflow-hidden">
           <h3><a href="#about">About</a></h3>
           <p>
-            Right now I am a webdeveloper but 2018 is the year I plan on becoming a Web comic creator as well. <a href="#about">More&hellip;</a>
+            My name is Sheldon Lloyd. I a full-stack web designer. <a href="#about">More&hellip;</a>
           </p>
         </div>
       </div>
