Add logos to portfolio

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li class="is-active"><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li title="CSS SPA Portfolio"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
       </ul>
       <h2><span class="secondary-color project-title">WebcomicX</span></h2>
       <div class="content overflow-hidden cf">
@@ -96,6 +97,7 @@
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li class="is-active"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
       </ul>
       <h2><span class="secondary-color project-title">comiCharacters</span></h2>
       <div class="content overflow-hidden cf">
@@ -129,6 +131,7 @@
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li class="is-active"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#logos" title="Logo Designs">Logo Designs</a></li>
       </ul>
       <h2><span class="secondary-color project-title">CSS SPA Portfolio</span></h2>
       <div class="content overflow-hidden cf">
@@ -158,6 +161,75 @@
         </p>
         <a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Read the rest in my blog post on medium</a>
       </div>
+    </div>    <div class="view overflow-hidden col-2" id="logos">
+      <ul class="project-list margin-0 secondary-color">
+        <li class="project-list-heading">
+          <h3>Project</h3>
+        </li>
+        <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li class="is-active"><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+      </ul>
+      <h2><span class="secondary-color project-title">CNS Adaptive Logos</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/CNS-adaptive-logos.png"><img class="project-preview" src="../images/CNS-adaptive-logos.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          This is a set of adpative logos for a hypthical company called CNS
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          CNS is a hypothitical company I created that creates multiple products. I wanted to have a logo that could adaptate to the design of each of these products
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Empress Art</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/empress-art.png"><img class="project-preview" src="../images/empress-art.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          This a logo I made for my cousin's bussines
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          This is the second version of the design. She asked for redesign because she wanted it to be more feminine. The letter A is in the shape of a art pen nib and is shown the process of complete the logo. The words empress art is surrounded by an representing the artists having a good eye for detail or good art. 
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Cyber.Beast</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/cyber.beast-logo.png"><img class="project-preview" src="../images/cyber.beast-logo.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          This a logo I made for my comic Cyber.Beast
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          The webcomic is creative commons lincences so I added creative commons elblem to the middle of the logo to represent the preiod
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">ComicPlus logo</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/comicplus-logo.png"><img class="project-preview" src="../images/comicplus-logo.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          This a logo for comicplus a CMS for webcomics I am creating. It is a new version of the webcomicx CMS I created before
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          The c and the p of the logo combines to create a speach bubble and plus sign using negative space. The I and the L of te logo shapes into a drawing untensil
+        </p>
+      </div>      <h2><span class="secondary-color project-title">ComicPlus logo</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/comicharacters-logo.png"><img class="project-preview" src="../images/comicharacters-logo.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          This a logo for comicharacters website
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          I wanted a logo that would be fun and bold
+        </p>
+      </div>
     </div>
     <div class="main-nav flexbox margin-0" id="nav">
       <div class="main-nav-item flexbox margin-0 secondary-color tertiary-background about">
@@ -175,6 +247,7 @@
             <li><div class="nav-list-wrapper"><a href="#webcomicx">WebcomicX</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#comiCharacters">comiCharacters</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#css-spa">CSS SPA Portfolio</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#logos">Logo Designs</a></div></li>
           </ul>
         </div>
       </div>
