--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li title="CSS SPA Portfolio"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+        <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
       </ul>
       <h2><span class="secondary-color project-title">WebcomicX</span></h2>
       <div class="content overflow-hidden cf">
@@ -98,6 +99,7 @@
         <li class="is-active"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+        <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
       </ul>
       <h2><span class="secondary-color project-title">comiCharacters</span></h2>
       <div class="content overflow-hidden cf">
@@ -132,6 +134,7 @@
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li class="is-active"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li><a href="#logos" title="Logo Designs">Logo Designs</a></li>
+        <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
       </ul>
       <h2><span class="secondary-color project-title">CSS SPA Portfolio</span></h2>
       <div class="content overflow-hidden cf">
@@ -161,7 +164,8 @@
         </p>
         <a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Read the rest in my blog post on medium</a>
       </div>
-    </div>    <div class="view overflow-hidden col-2" id="logos">
+    </div>    
+    <div class="view overflow-hidden col-2" id="logos">
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3>
@@ -170,6 +174,7 @@
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li class="is-active"><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+        <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
       </ul>
       <h2><span class="secondary-color project-title">CNS Adaptive Logos</span></h2>
       <div class="content overflow-hidden cf">
@@ -230,6 +235,77 @@
           I wanted a logo that would be fun and bold
         </p>
       </div>
+    </div>    <div class="view overflow-hidden col-2" id="illustrations">
+      <ul class="project-list margin-0 secondary-color">
+        <li class="project-list-heading">
+          <h3>Project</h3>
+        </li>
+        <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+        <li class="is-active"><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
+      </ul>
+      <h2><span class="secondary-color project-title">Tomasina</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/Tomasina_visor.jpg"><img class="project-preview" src="../images/Tomasina_visor.jpg" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          She is a charcter I redesigned for my cyber.beast comic
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          She has a drone on her finger she can fuse with called a cyber.beast. It is a spider drone hence why she is spinning it on her finger tip as if she is spinning a web
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Jax</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/Jax.png"><img class="project-preview" src="../images/Jax.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          Charcter I created for my cyber.beast comic
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          He is holding a drone called a cyber.beast. I gave him an armadillo lizard which can also be thought of has a dragon in his world. Since the curl into a ball as a defense I figured it would be perfect to turn into a drone which are in the shape of a ball.
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Kyshumu</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/Kyshumu_white-v2.jpg"><img class="project-preview" src="../images/Kyshumu_white-v2.jpg" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          He is a charcter I redesigned for my cyber.beast comic
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          He is in what is called hyperdrive mode when he fuses with a cyber.beast envoloping him in an armour modeled after the animal he fuses with. Being a lion using the element of fire it turned out great as it allowed me to draw the fire in the shape of his fur.
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Minia</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/MiNina_ReNet_black.jpg"><img class="project-preview" src="../images/MiNina_ReNet_black.jpg" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          The main heroine in my cyber.beast comic
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          I wanted to break the grid with this one. I used her drone modeled after a spine tailed swift with the lighting element to do it. I also wanted to see what it would look like if the characters from my world didn't hace pupils. The blue tips in her hair is a genetic defect. It's some thing I problably won't have in her future iterations 
+        </p>
+      </div>      
+      <h2><span class="secondary-color project-title">Ace</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="../images/Ace_Ink.jpg"><img class="project-preview" src="../images/Ace_Ink.jpg" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          Ace Inktober sketch
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          A character I drew during inktober using the tranquil prompt. He is a another character from my cyber.beast story shown meditating. It's something they do before they fuse with their cyber.beast
+        </p>
+      </div>
     </div>
     <div class="main-nav flexbox margin-0" id="nav">
       <div class="main-nav-item flexbox margin-0 secondary-color tertiary-background about">
@@ -248,6 +324,7 @@
             <li><div class="nav-list-wrapper"><a href="#comiCharacters">comiCharacters</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#css-spa">CSS SPA Portfolio</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#logos">Logo Designs</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#illustrations">Illustrations</a></div></li>
           </ul>
         </div>
       </div>
