Edit link for comicharaters and fixed typos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </ul>
       <h2><span class="secondary-color project-title">comiCharacters</span></h2>
       <div class="content overflow-hidden cf">
-        <a target="_blank" href="http://www.comicharacters.com"><img class="project-preview" src="images/comicharacters-screenshot.png" width="auto" height="auto" /></a>
+        <a target="_blank" href="https://ccsuniverse.azurewebsites.net/"><img class="project-preview" src="images/comicharacters-screenshot.png" width="auto" height="auto" /></a>
 
         <h3>Details</h3>
         <p>
@@ -251,7 +251,7 @@
         <a target="_blank" href="../images/Tomasina_visor.jpg"><img class="project-preview" src="../images/Tomasina_visor.jpg" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
-          She is a charcter I redesigned for my cyber.beast comic
+          She is a character I redesigned for my cyber.beast comic
         </p>
         <h3>Case Study</h3>
         <p>
@@ -263,7 +263,7 @@
         <a target="_blank" href="../images/Jax.png"><img class="project-preview" src="../images/Jax.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
-          Charcter I created for my cyber.beast comic
+          Character I created for my cyber.beast comic
         </p>
         <h3>Case Study</h3>
         <p>
@@ -275,7 +275,7 @@
         <a target="_blank" href="../images/Kyshumu_white-v2.jpg"><img class="project-preview" src="../images/Kyshumu_white-v2.jpg" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
-          He is a charcter I redesigned for my cyber.beast comic
+          He is a character I redesigned for my cyber.beast comic
         </p>
         <h3>Case Study</h3>
         <p>
